syntax = "proto3";

package echo;
option go_package = "github.com/salrashid123/go_mtls_scratchpad/grpc/echo";

service EchoServer {
  rpc SayHelloUnary (EchoRequest) returns (EchoReply) {}
}

message EchoRequest {
  string name = 1;
}

message EchoReply {
  string message = 1;
}